fix issue with center and right alignment

--- a/index.css
+++ b/index.css
@@ -18,3 +18,7 @@ body {
 .top-margin {
     margin-top: 2em;
 }
+
+.txt-center {
+    text-align: center;
+}
